# docs/swagger.yaml
@@ -191,6 +191,11 @@ definitions:
         description: draft or published
         type: string
     type: object
+  handlers.VideoProgressResponse:
+    properties:
+      positionSec:
+        type: integer
+    type: object
   handlers.VideoResponse:
     properties:
       video:
@@ -204,6 +209,9 @@ definitions:
         type: string
       queryParams:
         type: string
+      resumeAt:
+        description: seconds; where the user stopped last time, 0 = from the start
+        type: integer
     type: object
   handlers.VideoUploadResponse:
     properties:
@@ -233,6 +241,11 @@ definitions:
         type: string
       isFree:
         type: boolean
+    type: object
+  handlers.saveVideoProgressBody:
+    properties:
+      positionSec:
+        type: integer
     type: object
   models.AttemptAnswer:
     properties:
@@ -2412,6 +2425,60 @@ paths:
           schema:
             $ref: '#/definitions/utils.JSONResponse'
       summary: Get a signed HLS playlist
+      tags:
+      - videos
+  /videos/{id}/progress:
+    put:
+      consumes:
+      - application/json
+      description: Call every 10-15 seconds while playing and on pause. The next GET
+        /videos/{id}/stream returns it as resumeAt and the manifest starts playback
+        there. Send 0 when the video ends so it restarts from the beginning.
+      parameters:
+      - description: Video ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Position in seconds (0 to 86400)
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.saveVideoProgressBody'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Saved
+          schema:
+            allOf:
+            - $ref: '#/definitions/utils.JSONResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/handlers.VideoProgressResponse'
+              type: object
+        "400":
+          description: Invalid body or position
+          schema:
+            $ref: '#/definitions/utils.JSONResponse'
+        "401":
+          description: Not logged in
+          schema:
+            $ref: '#/definitions/utils.JSONResponse'
+        "404":
+          description: Video not found, or not visible to this user
+          schema:
+            $ref: '#/definitions/utils.JSONResponse'
+        "409":
+          description: Video is not ready yet (owner only)
+          schema:
+            $ref: '#/definitions/utils.JSONResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/utils.JSONResponse'
+      summary: Save where the user stopped in a video
       tags:
       - videos
   /videos/{id}/retry:
